# ifs-parser

./: .gitignore  AST_IMPROVEMENTS.md  Cargo.toml  FULL_CODEBASE_TEST.md  Makefile  PUBLISHING.md  README-Windows.md  README.md  TREE_SITTER_PLAN.md  TREE_SITTER_SETUP.md  TREE_SITTER_STATUS.md  build-windows.sh  run_codebase_tests.sh
.github/: copilot-instructions.md
.github/workflows/: build-wheels.yml
analysis/: README.md  bisect.js
analysis/entities/: README.md
analysis/enumerations/: README.md
analysis/storage/: README.md
analysis/views/: README.md
benches/: parser_bench.rs
examples/: README.md  debug_simple.rs  debug_tokens.rs  simple_test.rs  test_activity_function.rs  test_activity_plsql.rs  test_project_override.rs  test_tree_sitter.rs
examples/plsql/: simple_package.pls
grammars/ifs-cloud-parser/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  build.rs  go.mod  grammar.js  jest.config.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
grammars/ifs-cloud-parser/__tests__/: case-syntax.test.js  conditional-compilation.test.js  debug-array-access.test.js  debug-array.test.js  empty-declaration-blocks.test.js  exception-blocks.test.js  exists-expressions.test.js  expected-failures.test.js  grammar-tester.js  named-parameters.test.js  nested-procedures.test.js  plsql-procedures.test.js  test-framework-validation.test.js
grammars/ifs-cloud-parser/bindings/: Makefile  README.md
grammars/ifs-cloud-parser/bindings/c/: tree-sitter-ifs-cloud-parser.pc.in
grammars/ifs-cloud-parser/bindings/python/: __init__.py  binding.cc  pyproject.toml
grammars/ifs-cloud-parser/bindings/python/tests/: test_binding.py
grammars/ifs-cloud-parser/bindings/python/tree_sitter_ifs_cloud_parser/: __init__.py
grammars/ifs-cloud-parser/scripts/: package.js
grammars/tree-sitter-plsql-ifs/: Cargo.toml  README.md  build.rs  debug_parser.sh  find_parse_break.sh  grammar.js  grammar_new.js  grammar_old.js  package-lock.json  package.json  precise_bisect.sh  simple_bisect.sh  temp_test.plsql  test.plsql  test1.sql  test2.sql  test3.sql  test4.sql  test5.sql  test_apply.sql  test_apply_alias.sql  test_apply_simple.sql  test_apply_simple2.sql  test_assignment.plsql  test_basic.sql  test_case_insensitive.sql  test_complete_example.plsql  test_constants.plsql  test_cross_join.sql  test_cte.sql  test_cursor_attributes.plsql  test_cursor_simple.plsql  test_distinct.plsql  test_first_1000.plsql  test_first_1200.plsql  test_first_500.plsql  test_full.plsql  test_hierarchical_queries.plsql  test_identifier.plsql  test_inner_join.sql  (+29 more)
grammars/tree-sitter-plsql-ifs/__tests__/: advanced-cursor-features.test.js  advanced-loops.test.js  advanced-plsql.test.js  basic-sql.test.js  complex-sql-ddl.test.js  cursor-attributes.test.js  debug-field-access.test.js  execute-immediate.test.js  expected-failures.test.js  expressions.test.js  ifs-improvements-regression.test.js  joins.test.js  record-types.test.js  test-framework-validation.test.js
grammars/tree-sitter-plsql-ifs/queries/: highlights.scm  injections.scm  locals.scm
grammars/tree-sitter-plsql-ifs/scripts/: package.js
grammars/tree-sitter-plsql-ifs/src/: grammar.json  lib.rs  node-types.json
grammars/tree-sitter-plsql-ifs/test/corpus/: basic.txt
scripts/: build-grammars.sh  setup-tree-sitter.sh
src/: lib.rs  main.rs
src/index/: database.rs  mod.rs  search.rs  symbols.rs
src/parser/: ast.rs  incremental.rs  lexer.rs  mod.rs  parser.rs  tree_sitter_integration.rs  tree_sitter_simple.rs
src/static_analysis/: analyzer.rs  diagnostics.rs  mod.rs  rules.rs
src/utils/: file_utils.rs  logging.rs  mod.rs  performance.rs
tests/: full_codebase_test.rs
(+9 files in other folders)
