[package]
name = "tree-sitter-plsql-ifs"
version = "0.1.0"
edition = "2021"
authors = ["Sindre van der Linden"]
description = "Tree-sitter grammar for IFS Cloud PL/SQL variant"
license = "MIT"
build = "build.rs"

[dependencies]
tree-sitter = "0.20"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tree-sitter-cli = "0.20"
