[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifs-cloud-parser"
version = "0.2.0"
description = "A parser for IFS Cloud source code, made with tree-sitter. Tested on the entire 25.1.0 code-base with 100% success rate. Native support for SQL included. on IFS Cloud codebase"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sindre van der Linden", email = "sindre@apply.no"}
]
keywords = ["tree-sitter", "plsql", "ifs", "oracle", "parser", "ast", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "tree-sitter>=0.25.0,<0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "wheel",
    "build",
]

[project.urls]
Homepage = "https://github.com/graknol/ifs-parser"
Repository = "https://github.com/graknol/ifs-parser"
Issues = "https://github.com/graknol/ifs-parser/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ifs_cloud_parser*"]

[tool.black]
line-length = 88
target-version = ['py36']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
